decoder: h264: fix RefPicList0/1 without frame in DPB.

Some bitstreams (e.g. truncated, or non conformant), or bugs in codec
layers, would incorrectly make decoders to fill in the RefPicList0/1
lists with surfaces that have not received any content yet.

There is no reason for the driver to crash in such cases.

https://bugs.freedesktop.org/show_bug.cgi?id=82466

Signed-off-by: Gwenole Beauchesne <gwenole.beauchesne@intel.com>